--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngx-resource/core": "^15.0.0",
     "@ngx-resource/handler-ngx-http": "^15.0.1",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
